--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Document</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800&display=swap&subset=cyrillic"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+        rel="stylesheet" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -27,21 +27,84 @@
         <section class="title-block">
             <div class="container">
                 <div class="title-block__wrapper">
-                    <div class="title-block__right-item">
-                        <div class="title-block__right-item__video_wrapper">
-                            <button class="play-btn"><img src="./img/video.png" alt="video"></button>
-                            <video class="video" src="#"></video>
-                        </div>
-                    </div>
                     <div class="title-block__left-item">
                         <h1 class="title-block__left-item__title">
                             our strong organaisation
                         </h1>
                         <p class="title-block__left-item__description">
-                            Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt
-                            ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.
+                            Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do
+                            eiusmod tempor incididunt ut labore et. ectetur adig ipis cing
+                            elit, sed do eiusmod tempor incididunt.
                         </p>
-                        <button class="btn btn-red title-block__left-item__btn">Contact Us</button>
+                        <button class="btn btn-bg-red title-block__left-item__btn">
+                            Contact Us
+                        </button>
+                    </div>
+                    <div class="title-block__right-item">
+                        <div class="title-block__right-item__video_wrapper">
+                            <button class="play-btn">
+                                <img src="./img/video.png" alt="video" />
+                            </button>
+                            <video class="video" src="#"></video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="why-we">
+            <div class="container">
+                <div class="why-we__wrapper">
+                    <div class="why-we__left-item">
+                        <h2 class="left-item__title">
+                            do you know we can provide for you ?
+                        </h2>
+                        <p class="left-item__description">
+                            Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do
+                            eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit
+                            amet, consectetur adipis cing elit, ed doi eiusmod tempor
+                            incididunt ut labore et.
+                        </p>
+                        <button class="btn btn-bg-white left-item__btn">Learn More</button>
+                    </div>
+                    <div class="why-we__right-item">
+                        <div class="right-item__wrapper">
+                            <div class="why-we__right-item__item">
+                                <img class="right-item__item-img" src="./img/Settings.svg" alt="Setting" />
+                                <h4 class="right-item__item-title">Management</h4>
+                                <p class="right-item__item-text">
+                                    Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+                                    seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem
+                                    ipsum new idolor
+                                </p>
+                            </div>
+                            <div class="why-we__right-item__item">
+                                <img class="right-item__item-img" src="./img/Pencil.svg" alt="Setting" />
+                                <h4 class="right-item__item-title">UI /UX Design</h4>
+                                <p class="right-item__item-text">
+                                    Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+                                    seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem
+                                    ipsum new idolor
+                                </p>
+                            </div>
+                            <div class="why-we__right-item__item">
+                                <img class="right-item__item-img" src="./img/Diamond.svg" alt="Setting" />
+                                <h4 class="right-item__item-title">Logo / Branding</h4>
+                                <p class="right-item__item-text">
+                                    Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+                                    seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem
+                                    ipsum new idolor
+                                </p>
+                            </div>
+                            <div class="why-we__right-item__item">
+                                <img class="right-item__item-img" src="./img/Truck_2.svg" alt="Setting" />
+                                <h4 class="right-item__item-title">Animation</h4>
+                                <p class="right-item__item-text">
+                                    Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+                                    seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem
+                                    ipsum new idolor
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
