--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Document</title>
     <meta charset="UTF-8" />
@@ -266,7 +266,7 @@
               placeholder="Email Address..."
               type="email"
               name="email"
-              id="email"
+              id="email-sub"
               required
             />
             <input class="btn btn-bg-red" type="submit" value="Subscribe" />
