--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </div>
       </div>
     </footer>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="./script/jq.js" type="text/javascript"></script>
     <script src="./script/script.js"></script>
   </body>
 </html>
